# asl-qc

./: README.md  pyproject.toml
asl_qc/: __init__.py  anomaly.py  cli.py  cohort.py  cohort_report.py  consistency.py  loader.py  normalize.py  qc.py  report.py
asl_qc/metrics/: __init__.py  dvars.py  histogram.py  label_control.py  m0.py  mask_qc.py  motion.py  negative_fraction.py  qei.py  snr.py  spatial_cov.py
asl_qc_toolbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
results/: perfusion_study_qc.html  perfusion_study_qc.json  sub-Sub4_asl_qc.html  sub-Sub4_asl_qc.json  test_asl_qc.html  test_asl_qc.json
results/cohortqc/: cohortqc.md
tests/: conftest.py  test_metrics.py  test_new_metrics.py  test_qc.py
